Move api routes to apiRouter
